ISP20211217 Transfer Final Inspection Data To Pivot88

--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -56,6 +56,12 @@
     <Reference Include="office, Version=14.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="PmsWebApiUtility20">
+      <HintPath>..\..\_Dll\PmsWebApiUtility20.dll</HintPath>
+    </Reference>
+    <Reference Include="PmsWebApiUtility45">
+      <HintPath>..\..\_Dll\PmsWebApiUtility45.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="Sci">
       <HintPath>..\..\_Dll\Sci.dll</HintPath>
