--- a/Quality/ProductionDataAccessLayer/ProductionDataAccessLayer.csproj
+++ b/Quality/ProductionDataAccessLayer/ProductionDataAccessLayer.csproj
@@ -35,6 +35,9 @@
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
+    <Reference Include="PmsWebApiUtility20">
+      <HintPath>..\..\_Dll\PmsWebApiUtility20.dll</HintPath>
+    </Reference>
     <Reference Include="Sci">
       <HintPath>..\..\_Dll\Sci.dll</HintPath>
     </Reference>
@@ -73,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interface\IAdidasFGWTProvider.cs" />
+    <Compile Include="Interface\IAutomationErrMsgProvider.cs" />
     <Compile Include="Interface\IBrandProvider.cs" />
     <Compile Include="Interface\IColorFastnessDetailProvider.cs" />
     <Compile Include="Interface\IColorFastnessProvider.cs" />
@@ -121,6 +125,7 @@
     <Compile Include="Interface\ITypeSelectionProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider\MSSQL\AdidasFGWTProvider.cs" />
+    <Compile Include="Provider\MSSQL\AutomationErrMsgProvider.cs" />
     <Compile Include="Provider\MSSQL\BrandProvider.cs" />
     <Compile Include="Provider\MSSQL\BukkFGT\AccessoryOvenWashProvider.cs" />
     <Compile Include="Provider\MSSQL\ColorFastnessDetailProvider.cs" />
