--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -50,6 +50,11 @@
     <add name="HZG_ProductionDataAccessLayer" connectionString="Data Source=newerp.hzg.com.cn;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="HZG_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=newerp-bak.hzg.com.cn;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="HZG_PMSSewingAPIurl" connectionString="http://172.18.1.34:16888/" />
+    <!--SWR_Formal-->
+    <add name="SWR_DashboardDataAccessLayer" connectionString="Data Source=MESVR;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="SWR_ProductionDataAccessLayer" connectionString="Data Source=PMSVR;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="SWR_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=MESVR;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="SWR_PMSSewingAPIurl" connectionString="http://10.10.10.6:16888/" />
     <!--NAI_Formal-->
     <add name="NAI_DashboardDataAccessLayer" connectionString="Data Source=newerp.hzg.com.cn\NAI;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="NAI_ProductionDataAccessLayer" connectionString="Data Source=newerp.hzg.com.cn\NAI;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
@@ -99,6 +104,11 @@
     <add name="HZG_Dummy_ProductionDataAccessLayer" connectionString="Data Source=newerp.hzg.com.cn\mis;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="HZG_Dummy_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=newerp-bak.hzg.com.cn\mis;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="HZG_Dummy_PMSSewingAPIurl" connectionString="http://172.18.1.34:16889/" />
+    <!--SWR_Dummy-->
+    <add name="SWR_Dummy_DashboardDataAccessLayer" connectionString="Data Source=MESVR\mis;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="SWR_Dummy_ProductionDataAccessLayer" connectionString="Data Source=PMSVR\mis;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="SWR_Dummy_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=MESVR\mis;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="SWR_Dummy_PMSSewingAPIurl" connectionString="http://10.10.10.6:16889/" />
     <!--NAI_Dummy
     <add name="NAI_Dummy_DashboardDataAccessLayer" connectionString="Data Source=newerp.hzg.com.cn\mis;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="NAI_Dummy_ProductionDataAccessLayer" connectionString="Data Source=newerp.hzg.com.cn\mis;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
@@ -124,7 +134,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="IsTest" value="false" />
+    <add key="IsTest" value="true" />
     <add key="TestMailReceiver" value="benson.chung@sportscity.com.tw;willy.wei@sportscity.com.tw;jack.hsu@sportscity.com.tw;jeff.yeh@sportscity.com.tw;jimmy.liao@sportscity.com.tw" />
     <!--解碼用-->
     <add key="CryptoKey" value="scimis" />
