ISP20211567 Help to check diskspace 將ASP.NET Impersonation放置於release中，避免更版時被覆蓋掉

--- a/Quality/Quality/Web.Debug.config
+++ b/Quality/Quality/Web.Debug.config
@@ -15,6 +15,7 @@
     </connectionStrings>
   -->
   <system.web>
+    <identity xdt:Transform="Remove"/>
     <!--
       在下列範例中，"Replace" 轉換會取代
       Web.config 檔案的全部 <customErrors> 區段。
