--- a/Quality/Quality/Web.Release.config
+++ b/Quality/Quality/Web.Release.config
@@ -16,6 +16,7 @@
   -->
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
+    <identity xdt:Transform="InsertIfMissing" configSource="Extend.config" />
     <!--
       在下列範例中，"Replace" 轉換會取代
       Web.config 檔案的全部 <customErrors> 區段。
