--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -8,7 +8,7 @@
     <!--Taipei MIS Testing-->
     <add name="Debug_DashboardDataAccessLayer" connectionString="Data Source=testing\esp;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="Debug_ProductionDataAccessLayer" connectionString="Data Source=testing\esp;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
-    <add name="Debug_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=testing\esp;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="Debug_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=j1-7221;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="Debug_PMSSewingAPIurl" connectionString="http://172.17.3.97:16888/" />
     <!--PH1_Formal-->
     <add name="PH1_DashboardDataAccessLayer" connectionString="Data Source=PHL-NEWPMS-02.sportscity.local;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
