hxg併入hzg，故調整connection

--- a/Quality/BusinessLogicLayerTests1/App.config
+++ b/Quality/BusinessLogicLayerTests1/App.config
@@ -55,9 +55,9 @@
     <add name="NAI_ProductionDataAccessLayer" connectionString="Data Source=newerp.hzg.com.cn\NAI;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="NAI_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=newerp.hzg.com.cn\NAI;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <!--HXG_Formal-->
-    <add name="HXG_DashboardDataAccessLayer" connectionString="Data Source=SQL.hxg.server;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
-    <add name="HXG_ProductionDataAccessLayer" connectionString="Data Source=Ndata.hxg.server;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
-    <add name="HXG_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=SQL.hxg.server;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="HXG_DashboardDataAccessLayer" connectionString="Data Source=SQL;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="HXG_ProductionDataAccessLayer" connectionString="Data Source=Ndata;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="HXG_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=SQL;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="HXG_PMSSewingAPIurl" connectionString="http://172.16.0.209:16888/" />
     <!--PH1_Dummy-->
     <add name="PH1_Dummy_DashboardDataAccessLayer" connectionString="Data Source=PHL-NEWPMS\MIS;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
@@ -105,9 +105,9 @@
     <add name="NAI_Dummy_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=newerp.hzg.com.cn\mis;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     -->
     <!--HXG_Dummy-->
-    <add name="HXG_Dummy_DashboardDataAccessLayer" connectionString="Data Source=Ndata.hxg.server\mis;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
-    <add name="HXG_Dummy_ProductionDataAccessLayer" connectionString="Data Source=Ndata.hxg.server\mis;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
-    <add name="HXG_Dummy_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=sql.hxg.server\mis;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="HXG_Dummy_DashboardDataAccessLayer" connectionString="Data Source=Ndata\mis;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="HXG_Dummy_ProductionDataAccessLayer" connectionString="Data Source=Ndata\mis;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="HXG_Dummy_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=sql\mis;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="HXG_Dummy_PMSSewingAPIurl" connectionString="http://172.16.0.209:16889/" />
     <!--Taipei MIS Testing-->
     <!--Dummy-->
