ISP20220272 - [Mockup Oven]、[Mockup Wash] Report 新增Requirement欄位。 修正舊單無法存入圖片問題。

--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -100,6 +100,7 @@
     <Compile Include="ProductionDB\ColorFastness_Detail.cs" />
     <Compile Include="ProductionDB\DropDownList.cs" />
     <Compile Include="ProductionDB\Factory.cs" />
+    <Compile Include="ProductionDB\InspectionType.cs" />
     <Compile Include="ProductionDB\FIR.cs" />
     <Compile Include="ProductionDB\FIR_Laboratory.cs" />
     <Compile Include="ProductionDB\FIR_Laboratory_Crocking.cs" />
