ISP20220454 - Style Result，如果有有拿過RR/LR 或 FD資料，則顯著提醒

--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -261,6 +261,7 @@
     <Content Include="Image\Icon\Fabric.png" />
     <Content Include="Image\Icon\Factory.png" />
     <Content Include="Image\Icon\Import.png" />
+    <Content Include="Image\Icon\Light.png" />
     <Content Include="Image\Icon\List.png" />
     <Content Include="Image\Icon\List2.png" />
     <Content Include="Image\Icon\List3.png" />
