--- a/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
+++ b/Quality/ManufacturingExecutionDataAccessLayer/ManufacturingExecutionDataAccessLayer.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Provider\MSSQL\AuthorityProvider.cs" />
     <Compile Include="Provider\MSSQL\BACriteriaProvider.cs" />
     <Compile Include="Provider\MSSQL\DQSReasonProvider.cs" />
+    <Compile Include="Provider\MSSQL\InspectionBySPProvider.cs" />
     <Compile Include="Provider\MSSQL\InspectionDefectListProvider.cs" />
     <Compile Include="Provider\MSSQL\InspectionProvider.cs" />
     <Compile Include="Provider\MSSQL\MailToProvider.cs" />
