--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Areas\FinalInspection\FinalInspectionAreaRegistration.cs" />
     <Compile Include="Areas\SampleRFT\Controllers\BACriteriaController.cs" />
     <Compile Include="Areas\SampleRFT\Controllers\CFTCommentsController.cs" />
+    <Compile Include="Areas\SampleRFT\Controllers\InspectionBySPController.cs" />
     <Compile Include="Areas\SampleRFT\Controllers\InspectionController.cs" />
     <Compile Include="Areas\SampleRFT\Controllers\InspectionDefectListController.cs" />
     <Compile Include="Areas\SampleRFT\Controllers\MeasurementController.cs" />
@@ -222,6 +223,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\FinalInspection\CSS\FinalInspection.css" />
+    <Content Include="Areas\SampleRFT\CSS\InspectionBySP.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -401,6 +403,23 @@
     <Content Include="Areas\BulkFGT\Views\PerspirationFastness\Index.cshtml" />
     <Content Include="Areas\BulkFGT\Views\PerspirationFastness\Detail.cshtml" />
     <Content Include="Areas\BulkFGT\Views\AccessoryOvenWash\WashingFastness.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\InspectionBySP\Index.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\Shared\_ForAll_Layout.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\InspectionBySP\Setting.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\InspectionBySP\CheckList.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\Shared\_SampleRFTInspection_Layout.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\InspectionBySP\Measurement.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\InspectionBySP\MeasurementPicture.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\Shared\ScreenShot_ForRFTInsp.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\InspectionBySP\AddDefect.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\InspectionBySP\AddDefectPicture.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\Shared\ScreenShot_ForRFTInsp_Defect.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\InspectionBySP\BeautifulProductAudit.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\InspectionBySP\BAPicture.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\Shared\ScreenShot_ForRFTInsp_BA.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\InspectionBySP\DummyFitting.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\Shared\ScreenShot_ForRFTInsp_DF.cshtml" />
+    <Content Include="Areas\SampleRFT\Views\InspectionBySP\Others.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
