ISP20220430 - 新增sample RFT Inspection功能

--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -150,7 +150,7 @@
   <system.web.extensions>
     <scripting>
       <webServices>
-        <jsonSerialization maxJsonLength="10240000000"/>
+        <jsonSerialization maxJsonLength="2147483647"/>
       </webServices>
     </scripting>
   </system.web.extensions>
@@ -164,7 +164,7 @@
   -->
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="512000" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
