--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -956,6 +956,7 @@
     <Content Include="XLT\CFT Comment Report.xltx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Views\PublicWondow\PoidArticleList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
