--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -795,9 +795,6 @@
     <Content Include="ThirdParty\SciCustom\js\jquery-ui.min.js" />
     <Content Include="ThirdParty\SciCustom\js\main.js" />
     <Content Include="ThirdParty\SciCustom\js\MemoList.js" />
-    <Content Include="TMP\001.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -967,6 +964,7 @@
     <Folder Include="Areas\StyleManagement\Models\" />
     <Folder Include="Models\" />
     <Folder Include="ThirdParty\plugins\bootstrap-fileinput\fonts\" />
+    <Folder Include="TMP\" />
     <Folder Include="Views\Authority\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\SampleRFT\" />
