ISP20220811 - [Fabric Oven] PDF Report 調整，增加簽名檔。增加config TimeOut時間設定。

--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -165,6 +165,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5.2" maxRequestLength="1024000"/>
+    <sessionState timeout="66"></sessionState>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
