--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -1042,7 +1042,12 @@
   </Target>
   <PropertyGroup>
     <PostBuildEvent>echo { "Version" : "%25date:~0,4%25-%25date:~5,2%25-%25date:~8,2%25 %25time:~0,2%25:%25time:~3,2%25:%25time:~6,2%25" } &gt; VersionInfo.json
-xcopy D:\Work\Source Code\Quality\Quality\Quality\binVersionInfo.json &gt; D:\VersionInfo.json /S /D /Y</PostBuildEvent>
+rmdir .\app.publish /S
+xcopy .\VersionInfo.json .\app.publish\  /Y</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
