--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Areas\SampleRFT\Controllers\PFTperLineController.cs" />
     <Compile Include="Areas\SampleRFT\Controllers\PicturesDummyController.cs" />
     <Compile Include="Areas\SampleRFT\SampleRFTAreaRegistration.cs" />
+    <Compile Include="Areas\StyleManagement\Controllers\EtoEFlowChartController.cs" />
     <Compile Include="Areas\StyleManagement\Controllers\ExceptionFDController.cs" />
     <Compile Include="Areas\StyleManagement\Controllers\StyleListController.cs" />
     <Compile Include="Areas\StyleManagement\Controllers\PrintBarcodeController.cs" />
@@ -433,6 +434,7 @@
     <Content Include="Areas\SampleRFT\Views\InspBySPQuery\_Tab4_Layout.cshtml" />
     <Content Include="Areas\SampleRFT\Views\InspBySPQuery\_Tab5_Layout.cshtml" />
     <Content Include="Areas\SampleRFT\Views\InspBySPQuery\_Tab6_Layout.cshtml" />
+    <Content Include="Areas\StyleManagement\Views\EtoEFlowChart\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
