--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -20,6 +20,11 @@
     <add name="PH2_ProductionDataAccessLayer" connectionString="Data Source=VT1-PH2-PMS2.vertex.local;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="PH2_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=VT1-PH2-PMS2b.vertex.local;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="PH2_PMSSewingAPIurl" connectionString="http://192.168.202.71:16888/" />
+    <!--PAN_Formal-->
+    <add name="PAN_DashboardDataAccessLayer" connectionString="Data Source=VT1-PH2-PMS2\PAN;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="PAN_ProductionDataAccessLayer" connectionString="Data Source=VT1-PH2-PMS2\PAN;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="PAN_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=VT1-PH2-PMS2b\PAN;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <!--<add name="PH2_PMSSewingAPIurl" connectionString="http://192.168.202.71:16888/" />-->
     <!--ESP_Formal-->
     <add name="ESP_DashboardDataAccessLayer" connectionString="Data Source=SYSTEM2016BK.esprintavn.com;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="ESP_ProductionDataAccessLayer" connectionString="Data Source=system2016.esprintavn.com;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
