--- a/Quality/BusinessLogicLayerTests1/App.config
+++ b/Quality/BusinessLogicLayerTests1/App.config
@@ -23,7 +23,7 @@
     <!--PAN_Formal-->
     <add name="PAN_DashboardDataAccessLayer" connectionString="Data Source=VT1-PH2-PMS2\PAN;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <add name="PAN_ProductionDataAccessLayer" connectionString="Data Source=VT1-PH2-PMS2\PAN;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
-    <add name="PAN_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=VT1-PH2-PMS2\PAN;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
+    <add name="PAN_ManufacturingExecutionDataAccessLayer" connectionString="Data Source=VT1-PH2-PMS2B\PAN;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
     <!--<add name="PAN_PMSSewingAPIurl" connectionString="http://192.168.202.71:16888/" />-->
     <!--ESP_Formal-->
     <add name="ESP_DashboardDataAccessLayer" connectionString="Data Source=SYSTEM2016BK.esprintavn.com;Initial Catalog=Dashboard;Persist Security Info=True;User ID=scimis;Password=27128299;" providerName="System.Data.SqlClient" />
