ISP20220946 - 加入照片壓縮功能

--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -222,6 +222,7 @@
     </Compile>
     <Compile Include="Helper\Attribute.cs" />
     <Compile Include="Helper\CheckWorkDate.cs" />
+    <Compile Include="Helper\ImageHelper.cs" />
     <Compile Include="Helper\MyJsonValueProviderFactory.cs" />
     <Compile Include="Helper\SetListItem.cs" />
     <Compile Include="Helper\StringEncryptHelper.cs" />
