--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ Quality/QualityTests/obj/Debug/
 /Quality/packages
 Quality/Quality/Properties/PublishProfiles/FolderProfile.pubxml.user
 Quality/Quality/TMP/
+/ImageCompress/ImageCompress/bin
+/ImageCompress/ImageCompress/obj
