ISP20220946 - 調整圖片壓縮小程式

--- a/ImageCompress/ImageCompress/App.config
+++ b/ImageCompress/ImageCompress/App.config
@@ -43,10 +43,10 @@
     <modules>
       <add name="bin">
         <connectionStrings>
-          <add name="Production" connectionString="Data Source=testing\esp;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299" />
-          <add name="PMSFile" connectionString="Data Source=testing\esp;Initial Catalog=PMSFile;Persist Security Info=True;User ID=scimis;Password=27128299" />
-          <add name="Machine" connectionString="Data Source=testing\esp;Initial Catalog=Machine;Persist Security Info=True;User ID=scimis;Password=27128299" />
-          <add name="ManufacturingExecution" connectionString="Data Source=testing\esp;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299" />
+          <add name="PMSFile" connectionString="Data Source=testing\ph1;Initial Catalog=PMSFile;Persist Security Info=True;User ID=scimis;Password=27128299" />
+          <add name="Production" connectionString="Data Source=testing\ph1;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299" />
+          <add name="Machine" connectionString="Data Source=testing\ph1;Initial Catalog=Machine;Persist Security Info=True;User ID=scimis;Password=27128299" />
+          <add name="ManufacturingExecution" connectionString="Data Source=testing\ph1;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299" />
         </connectionStrings>
       </add>
       <add name="x86">
@@ -62,8 +62,8 @@
       </add>
       <add name="PH1_Formal">
         <connectionStrings>
-          <add name="Production" connectionString="Data Source=PHL-NEWPMS.sportscity.local;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299" />
           <add name="PMSFile" connectionString="Data Source=PHL-NEWPMS-02.sportscity.local;Initial Catalog=PMSFile;Persist Security Info=True;User ID=scimis;Password=27128299" />
+          <add name="Production" connectionString="Data Source=PHL-NEWPMS.sportscity.local;Initial Catalog=Production;Persist Security Info=True;User ID=scimis;Password=27128299" />
           <add name="Machine" connectionString="Data Source=PHL-NEWPMS-02.sportscity.local;Initial Catalog=Machine;Persist Security Info=True;User ID=scimis;Password=27128299" />
           <add name="ManufacturingExecution" connectionString="Data Source=PHL-NEWPMS-02.sportscity.local;Initial Catalog=ManufacturingExecution;Persist Security Info=True;User ID=scimis;Password=27128299" />
           <add name="Finance" connectionString="Data Source=PHL-NEWPMS.sportscity.local;Initial Catalog=FinanceEN;Persist Security Info=True;User ID=scimis;Password=27128299" />
@@ -690,7 +690,7 @@
   </sci>
 
   <appSettings>
-    <add key="module" value="Production"/>
+    <add key="module" value="PMSFile"/>
     <add key="codepage" value="000"/>
     <add key="enabledbconnectionselection" value="true"/>
     <add key="fontname" value="Tahoma"/>
