ISP20221034 - Style Result新增PO List分頁

--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -435,6 +435,7 @@
     <Content Include="Areas\SampleRFT\Views\InspBySPQuery\_Tab5_Layout.cshtml" />
     <Content Include="Areas\SampleRFT\Views\InspBySPQuery\_Tab6_Layout.cshtml" />
     <Content Include="Areas\StyleManagement\Views\EtoEFlowChart\Index.cshtml" />
+    <Content Include="Areas\StyleManagement\Views\StyleResult\_Tab5_Layout.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
