--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Public\StaticPivot88.cs" />
     <Compile Include="Public\WindowModel.cs" />
     <Compile Include="RequestModel\EtoEFlowChart_Request.cs" />
+    <Compile Include="RequestModel\HeatTransferWashRequest.cs" />
     <Compile Include="RequestModel\MockupFailMail_Request.cs" />
     <Compile Include="RequestModel\FinalInspection_Query.cs" />
     <Compile Include="RequestModel\FinalInspection_Request.cs" />
@@ -194,6 +195,7 @@
     <Compile Include="ViewModel\BulkFGT\GarmentTest_Detail_FGWT_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\GarmentTest_Detail_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\GarmentTest_ViewModel.cs" />
+    <Compile Include="ViewModel\BulkFGT\HeatTransferWash_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\MockupOven_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\MockupWash_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\PullingTest_ViewModel.cs" />
