--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Service\BulkFGT\FabricColorFastness_Service.cs" />
     <Compile Include="Service\BulkFGT\FabricOvenTestService.cs" />
     <Compile Include="Service\BulkFGT\FabricCrkShrkTest_Service.cs" />
+    <Compile Include="Service\BulkFGT\HeatTransferWashService.cs" />
     <Compile Include="Service\BulkFGT\MockupOvenService.cs" />
     <Compile Include="Service\BulkFGT\MockupWashService.cs" />
     <Compile Include="Service\BulkFGT\MockupCrockingService.cs" />
