ISP20221282 - 完成Daily HT Wash Test功能

--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -961,6 +961,10 @@
     </Content>
     <Content Include="Views\PublicWondow\PoidArticleList.cshtml" />
     <Content Include="Views\PublicWondow\OperationList.cshtml" />
+    <Content Include="Views\PublicWondow\Po_Supp_Detail_RefnoList.cshtml" />
+    <Content Include="XLT\HeatTransferWash.xltx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
